# dynamic_rag

./: .env.production.example  .gitignore  ARCHITECTURE.md  COMPLETE_SUMMARY.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  RUN_PROJECT.md  SETUP.md  STATUS.md  STEP2_COMPLETE.md  STEP5_COMPLETE.md  STEP5_SUMMARY.md  STEP6_COMPLETE.md  STEP7_COMPLETE.md  STEP8_COMPLETE.md  VENV_SETUP.md  alembic.ini  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init_db.py  pyproject.toml  readme.MD  requirements.txt  test_ollama.py  test_rag_pipeline.py  test_sample.txt  test_step5.py
app/: main.py  models.py
app/api/: deps.py  router.py
app/api/v1/: api.py
app/core/: config.py  embedding.py  exceptions.py  extractor.py  gemini_client.py  middleware.py  retriever.py  security.py
app/schemas/: chat.py  document.py  schemas.py
app/services/cache/: __init__.py  redis_cache.py
app/services/ingestion/: __init__.py  chunker.py  ocr_service.py  parser.py
app/services/llm/: __init__.py  ollama_service.py
app/services/retrieval/: __init__.py  embedding.py  hybrid_retrieval.py  reranker.py  vector_store.py
app/utils/: json_logger.py  logger.py
dashboard/: .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/pages/: ChatPage.css  ChatPage.jsx  ConversationsPage.css  ConversationsPage.jsx  DashboardPage.css  DashboardPage.jsx  (+2 more)
static/css/: styles.css
static/js/: main.js
templates/: index.html
(+3 files in other folders)
